@@ -1,32 +1,10 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/colAnyMissings.R,
-%   R/colAnyNAs.R, R/rowAnyMissings.R, R/rowAnyNAs.R
-\name{colAnyMissings}
-\alias{colAnyMissings}
-\alias{rowAnyMissings}
-\alias{colAnyMissings,DelayedMatrix-method}
-\alias{colAnyMissings,matrix-method}
+% Please edit documentation in R/colAnyNAs.R, R/rowAnyNAs.R
+\name{colAnyNAs,DelayedMatrix-method}
 \alias{colAnyNAs,DelayedMatrix-method}
-\alias{rowAnyMissings,DelayedMatrix-method}
-\alias{rowAnyMissings,matrix-method}
 \alias{rowAnyNAs,DelayedMatrix-method}
-\title{Checks if there are any missing values in an object or not}
+\title{Check if any elements in a row (column) of a matrix-like object is missing}
 \usage{
-colAnyMissings(x, rows = NULL, cols = NULL, ..., useNames = NA)
-
-rowAnyMissings(x, rows = NULL, cols = NULL, ..., useNames = NA)
-
-\S4method{colAnyMissings}{DelayedMatrix}(
-  x,
-  rows = NULL,
-  cols = NULL,
-  force_block_processing = FALSE,
-  ...,
-  useNames = TRUE
-)
-
-\S4method{colAnyMissings}{matrix}(x, rows = NULL, cols = NULL, ..., useNames = TRUE)
-
 \S4method{colAnyNAs}{DelayedMatrix}(
   x,
   rows = NULL,
@@ -35,17 +13,6 @@ rowAnyMissings(x, rows = NULL, cols = NULL, ..., useNames = NA)
   ...,
   useNames = TRUE
 )
-
-\S4method{rowAnyMissings}{DelayedMatrix}(
-  x,
-  rows = NULL,
-  cols = NULL,
-  force_block_processing = FALSE,
-  ...,
-  useNames = TRUE
-)
-
-\S4method{rowAnyMissings}{matrix}(x, rows = NULL, cols = NULL, ..., useNames = TRUE)
 
 \S4method{rowAnyNAs}{DelayedMatrix}(
   x,
@@ -59,15 +26,9 @@ rowAnyMissings(x, rows = NULL, cols = NULL, ..., useNames = NA)
 \arguments{
 \item{x}{A NxK \linkS4class{DelayedMatrix}.}
 
-\item{rows}{A \code{\link[base]{vector}} indicating subset of rows to
-operate over. If \code{\link[base]{NULL}}, no subsetting is done.}
-
-\item{cols}{A \code{\link[base]{vector}} indicating subset of columns to
-operate over. If \code{\link[base]{NULL}}, no subsetting is done.}
-
-\item{...}{Additional arguments passed to specific methods.}
-
-\item{useNames}{If \code{\link{NA}}, the default behavior of the function about naming support is remained. If \code{\link{FALSE}}, no naming support is done. Else if \code{\link{TRUE}}, names attributes of result are set. \strong{Only \code{useNames = NA} is currently supported, other values are silently ignored.}}
+\item{rows, cols}{A \code{\link{vector}} indicating the subset of rows
+(and/or columns) to operate over. If \code{\link{NULL}}, no subsetting is
+done.}
 
 \item{force_block_processing}{\code{FALSE} (the default) means that a
 seed-aware, optimised method is used (if available). This can be overridden
@@ -75,21 +36,22 @@ to use the general block-processing strategy by setting this to \code{TRUE}
 (typically not advised). The block-processing strategy loads one or more
 (depending on \verb{\link[DelayedArray]\{getAutoBlockSize\}()}) columns (\code{colFoo()})
 or rows (\code{rowFoo()}) into memory as an ordinary \link[base:array]{base::array}.}
+
+\item{...}{Additional arguments passed to specific methods.}
+
+\item{useNames}{If \code{\link{NA}}, the default behavior of the function about naming support is remained. If \code{\link{FALSE}}, no naming support is done. Else if \code{\link{TRUE}}, names attributes of result are set. \strong{Only \code{useNames = NA} is currently supported, other values are silently ignored.}}
 }
 \value{
-Returns \code{\link[base:logical]{TRUE}} if a missing value was
-detected, otherwise \code{\link[base:logical]{FALSE}}.
+Returns a \code{\link{logical}} \code{\link{vector}} of length N (K).
 }
 \description{
-Checks if there are any missing values in an object or not.
-\emph{Please use \code{base::anyNA()} instead of \code{anyMissing()},
-\code{colAnyNAs()} instead of \code{colAnyMissings()}, and
-\code{rowAnyNAs()} instead of \code{rowAnyMissings()}.}
+Check if any elements in a row (column) of a matrix-like object is missing.
 }
 \details{
-The implementation of this method is optimized for both speed and memory.
-The method will return \code{\link[base:logical]{TRUE}} as soon as a missing
-value is detected.
+The S4 methods for \code{x} of type \code{\link{matrix}},
+\code{\link{array}}, \code{\link{table}}, or \code{\link{numeric}} call
+\code{matrixStats::\link[matrixStats]{rowAnyNAs}} /
+\code{matrixStats::\link[matrixStats]{colAnyNAs}}.
 }
 \examples{
 # A DelayedMatrix with a 'matrix' seed
@@ -111,8 +73,14 @@ dm_HDF5[dm_HDF5 > 3] <- NA
 rowAnyNAs(dm_HDF5)
 }
 \seealso{
-Starting with R v3.1.0, there is \code{anyNA()} in the \pkg{base},
-which provides the same functionality as \code{anyMissing()}.
+\itemize{
+\item \code{matrixStats::\link[matrixStats:anyMissing]{rowAnyNAs}()} and
+\code{matrixStats::\link[matrixStats:anyMissing]{colAnyNAs}()} which are
+used when the input is a \code{matrix} or \code{numeric} vector.
+\item For checks if any element is equal to a value, see
+\code{\link[MatrixGenerics]{rowAnys}()}.
+\item \code{base::\link{is.na}()} and \code{base::\link{any}()}.
+}
 }
 \author{
 Peter Hickey
